Apply counter to documents

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,17 @@
     "from functools import reduce\n",
     "from tqdm import tqdm\n",
     "# from .autonotebook import tqdm as notebook_tqdm\n",
-    "import itertools"
+    "import itertools\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myseed = 10897"
    ]
   },
   {
@@ -57,34 +67,10 @@
    "source": [
     "# Email-Spam-Dataset\n",
     "\n",
-    "Use this dataset as preliminary exploration of classification techniques. Classifier can then be applied to Enron dataset if it works"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spam_col_names = ['id', 'Body', 'Label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfSA = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/completeSpamAssassin.csv', names=spam_col_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfEnron = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/enronSpamSubset.csv', names=spam_col_names)"
+    "Use this dataset as preliminary exploration of classification techniques. Classifier can then be applied to Enron dataset if it works\n",
+    "\n",
+    "0: not spam\n",
+    "1: spam"
    ]
   },
   {
@@ -93,12 +79,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfLing = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/lingSpam.csv', names=spam_col_names)"
+    "spam_col_names = ['id', 'Body', 'Label']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSA = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/completeSpamAssassin.csv', names=spam_col_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfEnron = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/enronSpamSubset.csv', names=spam_col_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLing = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/lingSpam.csv', names=spam_col_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +203,7 @@
        "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +542,7 @@
        "Name: ppBody, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,11 +553,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "negative = df[df['label'] == \"0\"].sample(7328)"
+    "#get the spam emails - there are 7328\n",
+    "positive = df[df['label'] == \"1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get an equal number of non-spam\n",
+    "negative = df[df['label'] == \"0\"].sample(7328, random_state=myseed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['subject', 'fwd', 'get', 'it', 'all']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"subject fwd get it all\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_doc_and_count(doc):\n",
+    "    return Counter(doc.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_word_counters = positive['ppBody'].apply(split_doc_and_count).to_frame()\n",
+    "neg_word_counters = negative['ppBody'].apply(split_doc_and_count).to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ppBody</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>{'save': 3, 'up': 2, 'to': 6, '70': 2, 'on': 3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>{'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>{'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>{'adult': 5, 'club': 1, 'offers': 2, 'free': 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>{'i': 2, 'thought': 1, 'you': 3, 'might': 1, '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429.0</th>\n",
+       "      <td>{'subject': 1, 'lucky': 2, 'you': 5, 'congratu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430.0</th>\n",
+       "      <td>{'subject': 1, 'new': 8, 'on': 13, 'capitalfm'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431.0</th>\n",
+       "      <td>{'subject': 1, 'submit': 4, '600': 4, 'this': ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432.0</th>\n",
+       "      <td>{'subject': 1, 'submit': 4, '600': 4, 'this': ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433.0</th>\n",
+       "      <td>{'subject': 1, 'i': 45, 'can': 17, 't': 8, 'st...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7328 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  ppBody\n",
+       "1.0    {'save': 3, 'up': 2, 'to': 6, '70': 2, 'on': 3...\n",
+       "2.0    {'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...\n",
+       "3.0    {'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...\n",
+       "4.0    {'adult': 5, 'club': 1, 'offers': 2, 'free': 1...\n",
+       "5.0    {'i': 2, 'thought': 1, 'you': 3, 'might': 1, '...\n",
+       "...                                                  ...\n",
+       "429.0  {'subject': 1, 'lucky': 2, 'you': 5, 'congratu...\n",
+       "430.0  {'subject': 1, 'new': 8, 'on': 13, 'capitalfm'...\n",
+       "431.0  {'subject': 1, 'submit': 4, '600': 4, 'this': ...\n",
+       "432.0  {'subject': 1, 'submit': 4, '600': 4, 'this': ...\n",
+       "433.0  {'subject': 1, 'i': 45, 'can': 17, 't': 8, 'st...\n",
+       "\n",
+       "[7328 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_word_counters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0      {'save': 3, 'up': 2, 'to': 6, '70': 2, 'on': 3...\n",
+       "2.0      {'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...\n",
+       "3.0      {'1': 1, 'fight': 1, 'the': 4, 'risk': 1, 'of'...\n",
+       "4.0      {'adult': 5, 'club': 1, 'offers': 2, 'free': 1...\n",
+       "5.0      {'i': 2, 'thought': 1, 'you': 3, 'might': 1, '...\n",
+       "                               ...                        \n",
+       "429.0    {'subject': 1, 'lucky': 2, 'you': 5, 'congratu...\n",
+       "430.0    {'subject': 1, 'new': 8, 'on': 13, 'capitalfm'...\n",
+       "431.0    {'subject': 1, 'submit': 4, '600': 4, 'this': ...\n",
+       "432.0    {'subject': 1, 'submit': 4, '600': 4, 'this': ...\n",
+       "433.0    {'subject': 1, 'i': 45, 'can': 17, 't': 8, 'st...\n",
+       "Name: ppBody, Length: 7328, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_word_counters['ppBody']"
    ]
   },
   {
@@ -720,7 +920,9 @@
     "# Todo\n",
     "\n",
     "- [x] Remove NaN id from merged `dfSpam`\n",
-    "- [ ] Tokenise body data"
+    "- [ ] Tokenise body data\n",
+    "- [ ] Set seed method\n",
+    "- [ ] Stratified Sample?"
    ]
   }
  ],
