Prelimary harvesting of common words - still needs uninformative words removing

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -575,6 +575,162 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 57407),\n",
+       " ('_', 52195),\n",
+       " ('to', 46435),\n",
+       " ('and', 38993),\n",
+       " ('of', 34897),\n",
+       " ('you', 31865),\n",
+       " ('a', 28076),\n",
+       " ('in', 22340),\n",
+       " ('your', 19707),\n",
+       " ('for', 19706),\n",
+       " ('this', 17870),\n",
+       " ('is', 17494),\n",
+       " ('i', 12005),\n",
+       " ('that', 11397),\n",
+       " ('with', 10670),\n",
+       " ('on', 10446),\n",
+       " ('it', 10378),\n",
+       " ('or', 9963),\n",
+       " ('be', 9923),\n",
+       " ('â', 9823)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pos_word_counter.most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 193740),\n",
+       " ('_', 174714),\n",
+       " ('of', 125878),\n",
+       " ('and', 106199),\n",
+       " ('to', 105232),\n",
+       " ('a', 78297),\n",
+       " ('in', 77217),\n",
+       " ('for', 50209),\n",
+       " ('is', 45466),\n",
+       " ('on', 36796),\n",
+       " ('i', 36192),\n",
+       " ('that', 34590),\n",
+       " ('you', 32494),\n",
+       " ('be', 31859),\n",
+       " ('this', 27542),\n",
+       " ('it', 26904),\n",
+       " ('s', 26639),\n",
+       " ('with', 24343),\n",
+       " ('are', 23226),\n",
+       " ('as', 23159)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.neg_word_counter.most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('_', 52195),\n",
+       " ('â', 9823),\n",
+       " ('½ï', 7960),\n",
+       " ('subject', 6630),\n",
+       " ('com', 6140),\n",
+       " ('1', 5574),\n",
+       " ('email', 5353),\n",
+       " ('e', 5095),\n",
+       " ('http', 4930),\n",
+       " ('2', 4520),\n",
+       " ('free', 4512),\n",
+       " ('3', 4315),\n",
+       " ('000', 4127),\n",
+       " ('mail', 3952),\n",
+       " ('please', 3950),\n",
+       " ('money', 3929),\n",
+       " ('get', 3915),\n",
+       " ('company', 3899),\n",
+       " ('information', 3881),\n",
+       " ('one', 3670)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.pos_word_counter.most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('_', 174714),\n",
+       " ('language', 15162),\n",
+       " ('university', 15147),\n",
+       " ('subject', 14113),\n",
+       " ('1', 13936),\n",
+       " ('http', 12953),\n",
+       " ('enron', 12349),\n",
+       " ('com', 11705),\n",
+       " ('e', 11580),\n",
+       " ('2', 10140),\n",
+       " ('one', 9584),\n",
+       " ('0', 9432),\n",
+       " ('00', 9220),\n",
+       " ('information', 9021),\n",
+       " ('mail', 8764),\n",
+       " ('www', 8569),\n",
+       " ('would', 8195),\n",
+       " ('10', 8140),\n",
+       " ('new', 8066),\n",
+       " ('please', 8060)]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.neg_word_counter.most_common(20)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
