--- a/classif.ipynb
+++ b/classif.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,19 +163,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>\\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...</td>\n",
+       "      <td>\\nSave up to 70% on Life Insurance.\\nWhy Spend...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -187,7 +187,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>I thought you might like these:\\r\\n1) Slim Dow...</td>\n",
+       "      <td>I thought you might like these:\\n1) Slim Down ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -196,14 +196,14 @@
       ],
       "text/plain": [
        "      id                                               Body Label\n",
-       "1.0  0.0  \\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...     1\n",
-       "2.0  1.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
-       "3.0  2.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
+       "1.0  0.0  \\nSave up to 70% on Life Insurance.\\nWhy Spend...     1\n",
+       "2.0  1.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
+       "3.0  2.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
        "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
+       "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,9 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\theco\\AppData\\Roaming\\Python\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#spacy imports\n",
     "import spacy\n",
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,35 +585,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('the', 57407),\n",
+       "[('the', 57403),\n",
        " ('_', 52195),\n",
        " ('to', 46435),\n",
        " ('and', 38993),\n",
        " ('of', 34897),\n",
-       " ('you', 31865),\n",
+       " ('you', 31855),\n",
        " ('a', 28076),\n",
        " ('in', 22340),\n",
        " ('your', 19707),\n",
        " ('for', 19706),\n",
-       " ('this', 17870),\n",
-       " ('is', 17494),\n",
-       " ('i', 12005),\n",
+       " ('this', 17867),\n",
+       " ('is', 17492),\n",
+       " ('i', 12056),\n",
        " ('that', 11397),\n",
        " ('with', 10670),\n",
        " ('on', 10446),\n",
        " ('it', 10378),\n",
        " ('or', 9963),\n",
-       " ('be', 9923),\n",
+       " ('be', 9921),\n",
        " ('â', 9823)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -629,21 +638,21 @@
        " ('a', 78297),\n",
        " ('in', 77217),\n",
        " ('for', 50209),\n",
-       " ('is', 45466),\n",
+       " ('is', 45464),\n",
        " ('on', 36796),\n",
-       " ('i', 36192),\n",
+       " ('i', 36475),\n",
        " ('that', 34590),\n",
        " ('you', 32494),\n",
-       " ('be', 31859),\n",
+       " ('be', 31850),\n",
        " ('this', 27542),\n",
        " ('it', 26904),\n",
-       " ('s', 26639),\n",
+       " ('s', 26640),\n",
        " ('with', 24343),\n",
        " ('are', 23226),\n",
        " ('as', 23159)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -664,25 +673,25 @@
        " ('â', 9823),\n",
        " ('½ï', 7960),\n",
        " ('subject', 6630),\n",
-       " ('com', 6140),\n",
+       " ('com', 6141),\n",
        " ('1', 5574),\n",
-       " ('email', 5353),\n",
-       " ('e', 5095),\n",
+       " ('email', 5354),\n",
+       " ('e', 5082),\n",
        " ('http', 4930),\n",
        " ('2', 4520),\n",
-       " ('free', 4512),\n",
+       " ('free', 4511),\n",
        " ('3', 4315),\n",
        " ('000', 4127),\n",
-       " ('mail', 3952),\n",
-       " ('please', 3950),\n",
+       " ('mail', 3959),\n",
+       " ('please', 3949),\n",
        " ('money', 3929),\n",
        " ('get', 3915),\n",
-       " ('company', 3899),\n",
-       " ('information', 3881),\n",
+       " ('company', 3898),\n",
+       " ('information', 3878),\n",
        " ('one', 3670)]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +710,7 @@
       "text/plain": [
        "[('_', 174714),\n",
        " ('language', 15162),\n",
-       " ('university', 15147),\n",
+       " ('university', 15135),\n",
        " ('subject', 14113),\n",
        " ('1', 13936),\n",
        " ('http', 12953),\n",
@@ -717,17 +726,84 @@
        " ('www', 8569),\n",
        " ('would', 8195),\n",
        " ('10', 8140),\n",
-       " ('new', 8066),\n",
+       " ('new', 8067),\n",
        " ('please', 8060)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d2.neg_word_counter.most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: if output folder not exist, create it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./Pickle/d-pos.pickle', 'wb') as outputfile:\n",
+    "    pickle.dump(d.pos_word_counter, outputfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./Pickle/d-neg.pickle', 'wb') as outputfile:\n",
+    "    pickle.dump(d.neg_word_counter, outputfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./Pickle/d2-pos.pickle', 'wb') as outputfile:\n",
+    "    pickle.dump(d2.pos_word_counter, outputfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./Pickle/d2-neg.pickle', 'wb') as outputfile:\n",
+    "    pickle.dump(d2.neg_word_counter, outputfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: load pickles"
    ]
   },
   {
@@ -762,9 +838,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\theco\\Documents\\Phishing-ML\\classif.ipynb Cell 31\u001b[0m in \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeature_extraction\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtext\u001b[39;00m \u001b[39mimport\u001b[39;00m TfidfVectorizer\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m tfidf \u001b[39m=\u001b[39m TfidfVectorizer(sublinear_tf\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, min_df\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, norm\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39ml2\u001b[39m\u001b[39m'\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlatin-1\u001b[39m\u001b[39m'\u001b[39m, ngram_range\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m), stop_words\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39menglish\u001b[39m\u001b[39m'\u001b[39m, max_features\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m features \u001b[39m=\u001b[39m tfidf\u001b[39m.\u001b[39mfit_transform(df\u001b[39m.\u001b[39mppBody)\u001b[39m.\u001b[39mtoarray()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "tfidf = TfidfVectorizer(sublinear_tf=True, min_df=5, norm='l2', encoding='latin-1', ngram_range=(1, 2), stop_words='english', max_features=10000)\n",
@@ -925,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
