print_most_common_n() function

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,9 @@
     "from tqdm import tqdm\n",
     "# from .autonotebook import tqdm as notebook_tqdm\n",
     "import itertools\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import pickle\n",
+    "import os"
    ]
   },
   {
@@ -585,176 +587,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 57403),\n",
-       " ('_', 52195),\n",
-       " ('to', 46435),\n",
-       " ('and', 38993),\n",
-       " ('of', 34897),\n",
-       " ('you', 31855),\n",
-       " ('a', 28076),\n",
-       " ('in', 22340),\n",
-       " ('your', 19707),\n",
-       " ('for', 19706),\n",
-       " ('this', 17867),\n",
-       " ('is', 17492),\n",
-       " ('i', 12056),\n",
-       " ('that', 11397),\n",
-       " ('with', 10670),\n",
-       " ('on', 10446),\n",
-       " ('it', 10378),\n",
-       " ('or', 9963),\n",
-       " ('be', 9921),\n",
-       " ('â', 9823)]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.pos_word_counter.most_common(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 193740),\n",
-       " ('_', 174714),\n",
-       " ('of', 125878),\n",
-       " ('and', 106199),\n",
-       " ('to', 105232),\n",
-       " ('a', 78297),\n",
-       " ('in', 77217),\n",
-       " ('for', 50209),\n",
-       " ('is', 45464),\n",
-       " ('on', 36796),\n",
-       " ('i', 36475),\n",
-       " ('that', 34590),\n",
-       " ('you', 32494),\n",
-       " ('be', 31850),\n",
-       " ('this', 27542),\n",
-       " ('it', 26904),\n",
-       " ('s', 26640),\n",
-       " ('with', 24343),\n",
-       " ('are', 23226),\n",
-       " ('as', 23159)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d.neg_word_counter.most_common(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('_', 52195),\n",
-       " ('â', 9823),\n",
-       " ('½ï', 7960),\n",
-       " ('subject', 6630),\n",
-       " ('com', 6141),\n",
-       " ('1', 5574),\n",
-       " ('email', 5354),\n",
-       " ('e', 5082),\n",
-       " ('http', 4930),\n",
-       " ('2', 4520),\n",
-       " ('free', 4511),\n",
-       " ('3', 4315),\n",
-       " ('000', 4127),\n",
-       " ('mail', 3959),\n",
-       " ('please', 3949),\n",
-       " ('money', 3929),\n",
-       " ('get', 3915),\n",
-       " ('company', 3898),\n",
-       " ('information', 3878),\n",
-       " ('one', 3670)]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.pos_word_counter.most_common(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('_', 174714),\n",
-       " ('language', 15162),\n",
-       " ('university', 15135),\n",
-       " ('subject', 14113),\n",
-       " ('1', 13936),\n",
-       " ('http', 12953),\n",
-       " ('enron', 12349),\n",
-       " ('com', 11705),\n",
-       " ('e', 11580),\n",
-       " ('2', 10140),\n",
-       " ('one', 9584),\n",
-       " ('0', 9432),\n",
-       " ('00', 9220),\n",
-       " ('information', 9021),\n",
-       " ('mail', 8764),\n",
-       " ('www', 8569),\n",
-       " ('would', 8195),\n",
-       " ('10', 8140),\n",
-       " ('new', 8067),\n",
-       " ('please', 8060)]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.neg_word_counter.most_common(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
+    "def save_pickle(object, path):\n",
+    "    if not os.path.exists('./Pickle'):\n",
+    "        os.makedirs('./Pickle')\n",
+    "\n",
+    "    with open('./Pickle/' + path, 'wb') as output:\n",
+    "        pickle.dump(object, output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: if output folder not exist, create it"
+    "def load_pickle(path):\n",
+    "    with open('./Pickle/' + path, 'rb') as input:\n",
+    "        return pickle.load(input)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uncomment the below to save your counters to a file for later use"
    ]
   },
   {
@@ -763,47 +624,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./Pickle/d-pos.pickle', 'wb') as outputfile:\n",
-    "    pickle.dump(d.pos_word_counter, outputfile)"
+    "# save_pickle(d.pos_word_counter, 'd-pos.pickle')\n",
+    "# save_pickle(d.neg_word_counter, 'd-neg.pickle')\n",
+    "# save_pickle(d2.pos_word_counter, 'd-pos.pickle')\n",
+    "# save_pickle(d2.neg_word_counter, 'd-neg.pickle')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uncomment the below to load your saved counters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./Pickle/d-neg.pickle', 'wb') as outputfile:\n",
-    "    pickle.dump(d.neg_word_counter, outputfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./Pickle/d2-pos.pickle', 'wb') as outputfile:\n",
-    "    pickle.dump(d2.pos_word_counter, outputfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./Pickle/d2-neg.pickle', 'wb') as outputfile:\n",
-    "    pickle.dump(d2.neg_word_counter, outputfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: load pickles"
+    "d1_pos_counts = load_pickle('d-pos.pickle')\n",
+    "d1_neg_counts = load_pickle('d-neg.pickle')\n",
+    "d2_pos_counts = load_pickle('d2-pos.pickle')\n",
+    "d2_neg_counts = load_pickle('d2-neg.pickle')"
    ]
   },
   {
@@ -816,6 +660,99 @@
     "Run some tests on the datasets from `Email-Spam-Dataset`:\n",
     "- find most common words in spam/not spam emails - plot on histogram\n",
     "- classify the sentiment of each email as positive/negative and see if there's a pattern in spam/not spam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_most_common_n(counter, n, name):\n",
+    "    print(f\"{n} most common tokens in {name}:\\n\")\n",
+    "\n",
+    "    most_common = counter.most_common(n)\n",
+    "\n",
+    "    if n < 6:\n",
+    "        output = \", \".join([f\"\\\"{word}\\\" ({count})\" for (word, count) in most_common])\n",
+    "    else:\n",
+    "        output = \"\\n\".join([f\"{word} ({count})\" for (word, count) in most_common])\n",
+    "\n",
+    "    print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('the', 57403), ('_', 52195), ('to', 46435), ('and', 38993), ('of', 34897)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d1_pos_counts.most_common(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 most common tokens in dfSpam (with stopwords) - Spam emails:\n",
+      "\n",
+      "\"the\" (57403), \"_\" (52195), \"to\" (46435), \"and\" (38993), \"of\" (34897)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_most_common_n(d1_pos_counts, 5, \"dfSpam (with stopwords) - Spam emails\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 most common tokens in dfSpam (stopwords removed) - non-Spam emails:\n",
+      "\n",
+      "_ (174714)\n",
+      "language (15162)\n",
+      "university (15135)\n",
+      "subject (14113)\n",
+      "1 (13936)\n",
+      "http (12953)\n",
+      "enron (12349)\n",
+      "com (11705)\n",
+      "e (11580)\n",
+      "2 (10140)\n",
+      "one (9584)\n",
+      "0 (9432)\n",
+      "00 (9220)\n",
+      "information (9021)\n",
+      "mail (8764)\n",
+      "www (8569)\n",
+      "would (8195)\n",
+      "10 (8140)\n",
+      "new (8067)\n",
+      "please (8060)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_most_common_n(d2_neg_counts, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
    ]
   },
   {
